--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-main.js
+# Node modules
+node_modules/
 
-index.html
+# Output directories
+dist/
+build/
+out/
 
+# TypeScript cache
+*.tsbuildinfo
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+
+# Coverage reports
+coverage/
+.nyc_output/
+
+# Test outputs
+jest-html-reporters-*
